# AgileDevSecOpsDemo

./: .dockerignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirement.txt
app/: api.py  create_pw.py  credentials.yaml  main.py  sample_command.txt  utils.py  web_gui.py
pair programing/: source.py  test.py  test_data.csv
pair programing demo/: Dockerfile  source.py  test_data.csv
